# deepseek-code

./: .deepseek-code.example.json  .zcode.example.json  CLAUDE.md  LICENSE  README.md  package.json  tsconfig.json
docs/: AGENTS.md  ARCHITECTURE.md  MCP.md  PROVIDERS.md
src/: index.tsx
src/agent/: base.ts  index.ts
src/core/: config.ts  storage.ts  types.ts
src/provider/: index.ts  registry.ts
src/tool/: index.ts
src/tui/: App.tsx  ChatPanel.tsx  CommandPicker.tsx  MessageView.tsx  MultilineTextInput.tsx  PermissionPrompt.tsx  QueuePreview.tsx  ShortcutOverlay.tsx  Spinner.tsx  StatusBar.tsx  TextInput.tsx  ToolBlock.tsx  WelcomeScreen.tsx  index.ts
z-code-cpp/: CMakeLists.txt
z-code-cpp/include/agent/: base.hpp
z-code-cpp/include/core/: config.hpp  types.hpp
z-code-cpp/include/provider/: anthropic_adapter.hpp  http_utils.hpp  openai_adapter.hpp  registry.hpp
z-code-cpp/include/tool/: tools.hpp
z-code-cpp/include/tui/: app.hpp
z-code-cpp/src/agent/: base.cpp
z-code-cpp/src/core/: config.cpp  types.cpp
z-code-cpp/src/provider/: anthropic_adapter.cpp  openai_adapter.cpp  registry.cpp
z-code-cpp/src/tool/: file_tools.cpp
